# eth-tx-proof

./: .env  .gitignore  .goat.swp  .gwiiii.swo  Cargo.toml  README.md  get-proof-bad.bash  get-proof-bad.json  step1.bash
.devcontainer/: devcontainer.json
.github/workflows/: cI.yml  ci.yml
common/: Cargo.toml
common/src/prover_state/: circuit.rs  mod.rs  persistence.rs
deploy/: paladin-worker@.service
leader/: Cargo.toml
leader/src/: cli.rs  init.rs  lib.rs  lib2.rs  main.rs  mpt.rs  padding_and_withdrawals.rs  prover.rs  rpc.rs  utils.rs
ops/: Cargo.toml
ops/src/: lib.rs
src/: clean.rs  lib.rs  main.rs  mpt.rs  partial_tries.rs  utils.rs
worker/: Cargo.toml
