[workspace]
members = ["leader", "worker", "ops", "common"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ethers = "2.0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
plonky2 = "0.2.1"
evm_arithmetization = { version = "0.1.3", path = "../zk_evm/evm_arithmetization" }
clap = { version = "4.4.11", features = ["derive", "env"] }
trace_decoder = { version = "0.3.0", path = "../zk_evm/trace_decoder" }
proof_gen = { path = "../zk_evm/proof_gen" }
dotenvy = "0.15.7"
paladin-core = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
incremental = true
