[workspace]
members = ["leader", "worker", "ops", "common"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "rpc-types-eth",
    "rpc-types-trace",
    "providers",
    "transports",
    "transport-http",
    "rpc-client",
    "consensus",
    "rlp",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
plonky2 = "0.2.2"
evm_arithmetization = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
clap = { version = "4.4.11", features = ["derive", "env"] }
trace_decoder = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
proof_gen = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
dotenvy = "0.15.7"
paladin-core = "0.4.2"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev.package.plonky2]
opt-level = 3
codegen-units = 1
