[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
plonky_block_proof_gen = { workspace = true }
protocol_decoder = { workspace = true }
plonky2 = { workspace = true }
plonky2_evm = { workspace = true }
clap = { workspace = true }
thiserror = "1.0.50"
memmap = "0.7.0"
