[package]
name = "leader"
version = "0.1.0"
license = "MIT or Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
plonky2 = { workspace = true }
evm_arithmetization = { workspace = true }
clap = { workspace = true }
trace_decoder = { workspace = true }
proof_gen = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
paladin-core = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ethers = { workspace = true }

itertools = "0.11.0"
mpt_trie = "0.2.0"
hex = "0.4.3"
serde_json = "1.0.108"

# Local dependencies
ops = { path = "../ops" }
common = { path = "../common" }
