[package]
name = "leader"
version = "0.1.0"
license = "MIT or Apache-2.0"
edition = "2021"

[dependencies]
__ethers_for_compat = { version = "2.0.14", package = "ethers" }
__primitive_types_for_compat = { package = "primitive-types", version = "0.12.2" }
alloy.workspace = true
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
evm_arithmetization = { workspace = true }
futures = "0.3.30"
itertools = "0.11.0"
mpt_trie = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
paladin-core = { workspace = true }
plonky2 = { workspace = true }
proof_gen = { workspace = true }
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { workspace = true }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
tokio = { workspace = true }
trace_decoder = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local dependencies
ops = { path = "../ops" }
common = { path = "../common" }
