[package]
name = "ops"
version = "0.1.0"
edition = "2021"

[dependencies]
paladin-core = { workspace = true }
serde = { workspace = true }
plonky_block_proof_gen = { workspace = true }
protocol_decoder = { workspace = true }
tracing = { workspace = true }
ethers = { workspace = true }

rlp = "0.5.2"

# Local dependencies
common = { path = "../common" }
