[package]
name = "ops"
version = "0.1.0"
license = "MIT or Apache-2.0"
edition = "2021"

[dependencies]
paladin-core = { workspace = true }
serde = { workspace = true }
proof_gen = { workspace = true }
trace_decoder = { workspace = true }
tracing = { workspace = true }
ethers = { workspace = true }
evm_arithmetization = { workspace = true }

rlp = "0.5.2"

# Local dependencies
common = { path = "../common" }
